--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-gb">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Elmstagram</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" sizes="16x16 32x32" href="./img/favicon.ico">
+    <base href="/">
   </head>
+
   <body>
     <div id="app"></div>
-
-    <script src="js/app.js"></script>
-    <script>
-      Elm.App.embed(document.getElementById("app"));
-    </script>
   </body>
 </html>
