--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Elmstagram</title>
     <link rel="shortcut icon" sizes="16x16 32x32" href="./img/favicon.ico">
     <base href="/">
-  </head>
+  <link href="app.e93e874f7caddad00b12.bundle.css" rel="stylesheet"></head>
 
   <body>
     <div id="app"></div>
-  </body>
+  <script type="text/javascript" src="app.e93e874f7caddad00b12.bundle.js"></script></body>
 </html>
