--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Elmstagram</title>
     <link rel="shortcut icon" sizes="16x16 32x32" href="./img/favicon.ico">
-
+    <base href="/Elmstagram">
   <link href="app.e93e874f7caddad00b12.bundle.css" rel="stylesheet"></head>
 
   <body>
